log/build_2024-05-14_13-17-11/blackjack/stderr.log
  File "/home/mustache/ros2_ws/install/blackjack/lib/python3.10/site-packages/blackjack/app_multithread.py", line 279
    x, y, w, h = cv.boundingRect(landmark_array)model/keypoint_classifier
                                                ^^^^^
SyntaxError: invalid syntax

